docker-kubernetes-security-practice-guide-1.0.0/chapter6/6.2.1/example-destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: default
  namespace: istio-system
spec:
  # 指定されたhostでmTLSのリクエストを送る設定が適用される
  host: "*.local"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
