docker-kubernetes-security-practice-guide-1.0.0/chapter6/6.2.1/test-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: test-rule
  namespace: test
spec:
  host: "*.test.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
